Fix Drag problem , overflow X axis

--- a/public/themes/lesydrangees/assets/css/style.css
+++ b/public/themes/lesydrangees/assets/css/style.css
@@ -7,10 +7,16 @@
   font-weight: 400
 }
 
+html {
+  overflow-x: hidden;
+  max-width: 100vw
+}
+
 body {
   box-sizing: border-box;
   display: inline-block;
   width: 100vw;
+  max-width: 100vw;
   clear: both;
   overflow-x: hidden
 }
